hiding my url in gitignore

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,11 +7,13 @@
 
 <div class="container">
 
-<h1>Github</h1>
+<h1>Githubpro</h1>
 <div class="row">
-    <img src="Documents/jackie.jpg">
+    <img src="assets/jackie.jpg"style="height:300px;width:200px">
     <p>{{giti.githubUserName}}</p>
     <p>{{giti.repositories}}</p>
+    <p>{{giti.biography}}</p>
+    <p>{{giti.gits}}</p>
 </div>
 <!-- <ng-progress></ng-progress> -->
 </div>
