adding a service to my project

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -10,10 +10,12 @@
 <h1>Githubpro</h1>
 <div class="row">
     <img src="assets/jackie.jpg"style="height:300px;width:200px">
-    <p>{{giti.githubUserName}}</p>
-    <p>{{giti.repositories}}</p>
-    <p>{{giti.biography}}</p>
-    <p>{{giti.gits}}</p>
+    <p>GithubUserName:{{giti.githubUserName}}</p>
+    <p>Repositories:{{giti.repositories}}</p>
+    <p>Biography:{{giti.biography}}</p>
+    <p>Gits:{{giti.gits}}</p>
+    <p>Followers:{{giti.followers}}</p>
+    <p>Following:{{giti.following}}</p>
 </div>
 <!-- <ng-progress></ng-progress> -->
 </div>
