connecting service to user component

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -10,12 +10,12 @@
 <h1>Githubpro</h1>
 <div class="row">
     <img src="assets/jackie.jpg"style="height:300px;width:200px">
-    <p>GithubUserName:{{giti.githubUserName}}</p>
-    <p>Repositories:{{giti.repositories}}</p>
-    <p>Biography:{{giti.biography}}</p>
-    <p>Gits:{{giti.gits}}</p>
-    <p>Followers:{{giti.followers}}</p>
-    <p>Following:{{giti.following}}</p>
+    <p>GithubUserName:{{gitis.githubUserName}}</p>
+    <p>Repositories:{{gitis.repositories}}</p>
+    <p>Biography:{{gitis.biography}}</p>
+    <p>Gits:{{gitis.gits}}</p>
+    <p>Followers:{{gitis.followers}}</p>
+    <p>Following:{{gitis.following}}</p>
 </div>
 <!-- <ng-progress></ng-progress> -->
 </div>
