--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    width:100%;
+    height:800px;
+    background-image:url("http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg");
+    color:white;
+}
+.one{
+    width:100%;
+    height:200px;
+}
