--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -19,8 +19,8 @@
 
 
 
-<div class="form-group"id="container1">
-    <input type="text" class="input" [(ngModel)]=userName>
+<div id="container1">
+    <input type="text" class="input" [(ngModel)]=userName style="width:200px;height:50px;margin-right:30px">
     <button class="butt" (click)="SearchUser()" style="text-align:center;background-color:grey;width:120px;height:70px">SearchUser</button>
     <div *ngIf="response" id="response">
         <br>
@@ -33,7 +33,7 @@
             <p class="mb-0"><b>followers:</b>{{response.followers}}</p>
             <p class="mb-0"><b>GithubUserName:</b>{{response.following}}</p>
         </div>
-        <a href="{{response.html_url}}" target="_blank" class="list-group-item list-group-item-action active"><button style="background-color: #e7e7e7; color: black;">View the User Profile</button>
+        <a href="{{response.html_url}}" target="_blank" class="list-group-item list-group-item-action active"><button style="background-color: #e7e7e7; background-color:grey;width:120px;height:70px">View the User Profile</button>
             </a>
 
 </div>
