--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -20,7 +20,7 @@
 
 
 <div id="container1">
-    <input type="text" class="input" [(ngModel)]=userName style="width:200px;height:50px;margin-right:30px">
+    <input type="text" class="input" [(ngModel)]=userName style="width:200px;height:50px;margin-right:30px;border-radius:15px 15px">
     <button class="butt" (click)="SearchUser()" style="text-align:center;background-color:grey;width:120px;height:70px">SearchUser</button>
     <div *ngIf="response" id="response">
         <br>
