--- a/src/styles.css
+++ b/src/styles.css
@@ -12,10 +12,10 @@ body{
     margin-top:60px;
 }
 #container1{
-    margin-left:350px;
-    border:2px solid black;
-    background-color:grey;
-    color:black;
+    margin-left:420px;
+    /* border:2px solid black; */
+    /* background-color:grey; */
+    color:white;
     width:500px;
-    border-radius:15px 15px;
+    /* border-radius:15px 15px; */
 }
