--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row"> -->
     
 
 <!-- <div class="container">
@@ -18,7 +18,7 @@
 
 
 
-
+<div class="ten">
 <div id="container1">
     <input type="text" class="input" [(ngModel)]=userName style="width:300px;height:50px;margin-right:30px;border-radius:15px 15px">
     <button class="butt" (click)="SearchUser()" style="text-align:center;background-color:grey;width:120px;height:70px">SearchUser</button>
@@ -36,6 +36,11 @@
         <a href="{{response.html_url}}" target="_blank" class="list-group-item list-group-item-action active"><button style="background-color: #e7e7e7; background-color:grey;width:120px;height:70px">View the User Profile</button>
             </a>
 
+    </div>
 </div>
-<footer style="width:100%;height:100px;background-color:grey">Copyright@jacky2019</footer>
+    <div class="footer">
+    <p>Copyright@jacky2019</p>
+    </div>
+
+<!-- <footer style="width:100%;height:100px;background-color:grey">Copyright@jacky2019</footer> -->
 </div>
