adding a url to the environment.prod.ts

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -31,7 +31,7 @@
             <p class="mb-0"><b>Biography:</b>{{response.bio}}</p>
             <p class="mb-0"><b>public_gists:</b>{{response.public_gists}}</p>
             <p class="mb-0"><b>followers:</b>{{response.followers}}</p>
-            <p class="mb-0"><b>GithubUserName:</b>{{response.following}}</p>
+            <p class="mb-0"><b>following:</b>{{response.following}}</p>
         </div>
         <a href="{{response.html_url}}" target="_blank" class="list-group-item list-group-item-action active"><button style="background-color: #e7e7e7; background-color:grey;width:120px;height:70px;border-radius:15px 15px;font-size:15px">View the User Profile</button>
             </a>
