--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -13,6 +13,12 @@
     width:100%;
     font-family:Serif;
     font-size:15px;
+    width:100%;
+    height:800px;
+    background-image:url("http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg");
+    background-size:cover;
+    color:white;
+    font-family:Serif;
    
 }
 .footer {
@@ -25,3 +31,10 @@
     color: white;
     text-align: center;
  }
+ .one{
+    width:550px;
+    height:200px;
+    margin-left:350px;
+    margin-top:0;
+    padding-top:30px;
+}
