--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -19,6 +19,9 @@
 
 
 <div class="ten">
+<div class="one">
+    <h1>Welcome to my Github Search Project!</h1>
+</div>
 <div id="container1">
     <input type="text" class="input" [(ngModel)]=userName style="width:300px;height:50px;margin-right:30px;border-radius:15px 15px;font-size:17px">
     <button class="butt" (click)="SearchUser()" style="text-align:center;background-color:grey;width:120px;height:70px;border-radius:15px 15px;font-size:17px">SearchUser</button>
